--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,12 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #e9e9e9;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --font-s-grotesk: var(--font-space-grotesk);
+  --color-bg: var(--background);
+  --font-neue: var(--font-neue);
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -15,3 +15,10 @@
     --foreground: #ededed;
   }
 } */
+
+* {
+  @apply font-neue;
+}
+body {
+  @apply bg-bg;
+}
