--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,23 +2,32 @@
 
 :root {
   --background: #e9e9e9;
+  --text: #000000;
+  --randomTest: #5e5e5e;
+}
+
+:root[class~="dark-mode"] {
+  --background: #0a0a0a;
+  --text: #ffffff;
 }
 
 @theme inline {
   --color-bg: var(--background);
   --font-neue: var(--font-neue);
+  --color-text: var(--text);
 }
 
-/* @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-} */
-
 * {
-  @apply font-neue;
+  @apply font-neue text-text duration-500 transition-colors;
 }
 body {
   @apply bg-bg;
+}
+
+section {
+  @apply w-full min-h-screen flex items-center justify-center flex-col;
+}
+
+h1 {
+  @apply lg:text-9xl md:text-7xl text-4xl  text-center;
 }
